[package]
name = "mongodb-rust"
version = "0.1.0"
authors = ["ethanwc <ethanwc@u.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"


[dependencies.mongodb]
version = "0.11.0"
default-features = false
features = ["async-std-runtime"]